--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>DZ Vacation Tour and Travel</title>
+
+        <meta property="og:title" content="DZ Vacation Tour and Travel" />
+        <meta property="og:description" content="DZ Vacation offers exciting customizable packages to spectacular destinations. DZ Vacation aims to create a harmony of travellers and industry operatives and streamline the travel process with modern, cutting edge technologies." />
+        <meta property="og:url" content="https://asifaleem-del.github.io/dz-vacation/" />
+        <meta property="og:image" itemprop="image" content="https://asifaleem-del.github.io/dz-vacation//img/favicon.png" />
         <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
     <body>
-        <header id="home">
+        <header>
             <nav>
                 <div class="m-navigatior" id="iconToggle" onclick="toggleNav(this)">
                     <span class="humberger"><i class="fa-solid fa-bars"></i></span>
@@ -22,13 +28,12 @@
                     <a href="#about">About Us</a>
                     <a href="#tours">Tours</a>
                     <a href="#clients">Our Clients</a>
-                    <a href="#">Packages</a>
+                    <a href="#tours">Packages</a>
                     <a href="#contact">Contact Us</a>
-                    <a href="#">Career</a>
                 </div>
             </nav>
         </header>
-        <section class="carousel">
+        <section class="carousel" id="home">
             <div class="list">
                 <div class="item">
                     <img src="img/1.jpg" alt="">
@@ -99,29 +104,29 @@
                 <div class="item">
                     <img src="img/1.jpg" alt="">
                     <div class="content">
-                        <div class="title">Name Slider</div>
-                        <div class="des">Description</div>
+                        <div class="title">Agra</div>
+                        <div class="des">Taj Mahal</div>
                     </div>
                 </div>
                 <div class="item">
                     <img src="img/2.jpg" alt="">
                     <div class="content">
-                        <div class="title">Name Slider</div>
-                        <div class="des">Description</div>
+                        <div class="title">Dubai</div>
+                        <div class="des">Dubai City</div>
                     </div>
                 </div>
                 <div class="item">
                     <img src="img/3.jpg" alt="">
                     <div class="content">
-                        <div class="title">Name Slider</div>
-                        <div class="des">Description</div>
+                        <div class="title">Jim Corbett</div>
+                        <div class="des">Jim Corbett National Park</div>
                     </div>
                 </div>
                 <div class="item">
                     <img src="img/4.jpg" alt="">
                     <div class="content">
-                        <div class="title">Name Slider</div>
-                        <div class="des">Description</div>
+                        <div class="title">Jammu & Kashmir</div>
+                        <div class="des">Dal Lake</div>
                     </div>
                 </div>
             </div>
@@ -139,10 +144,10 @@
             <div class="reveal">
             <aside class="left">
                 <span class="img-1">
-                    <img src="img/1.jpg" alt="about us" height="250">
+                    <img src="img/about-1.jpg" alt="about us" height="250">
                 </span>
                 <span class="img-2">
-                    <img src="img/2.jpg" alt="about us" height="250">
+                    <img src="img/about-2.jpg" alt="about us" height="250">
                 </span>
             </aside>
             <aside class="right">
@@ -220,6 +225,11 @@ process with modern, cutting edge technologies.
             </div>
             </div>
         </section>
+        <section class="clients" id="clients">
+            <div class="container reveal">
+                <h2>Our Clients</h2>
+            </div>
+        </section>
         <section class="contact" id="contact">
             <div class="container reveal">
               <div class="heading-text">
@@ -263,7 +273,13 @@ process with modern, cutting edge technologies.
                     <i class="fa-brands fa-square-pinterest"></i>
                 </span>
               </div>
+              <div class="copyright">
+                <span class="copyright-text">Copyright © 2022, DZ Vacation International | Design By: <a href="https://asifaleem-del.github.io/portfolio" style="color: #00a4d9; font-weight: bold; text-decoration: underline;" target="_blank">Asif Aleem Senior UI Developer</a></span>
+              </div>
         </section>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">
+            <span><i class="fa-solid fa-arrow-up"></i></span>
+        </button>
         <script src="./slider.js"></script>
     </body>
 </html>
