Update client section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@ process with modern, cutting edge technologies.
                 <p class="about-text bold">
                     -Tanzim Raza<br> General Manager –Corporate & MICE Sales
                 </p>
-                <button class="btn mr-t-16">Read more</button>
+                <button class="btn mr-t-16">Read more</button> 
+                <a href="dz-vacation-broucher.pdf" target="_blank" class="secondarybtn mr-t-16">Download Our Brochure</a>
             </aside>
             </div>
         </section>
@@ -218,6 +219,9 @@ process with modern, cutting edge technologies.
         <section class="clients" id="clients">
             <div class="container reveal">
                 <h2>Our Clients</h2>
+                <div class="clents-logo">
+                    <img src="img/client/clients.jpg" alt="" width="100%" />
+                </div>
             </div>
         </section>
         <section class="contact" id="contact">
